Link all curl_easy methods. Start rewriting the bindings.